@@ -11,6 +11,7 @@ This version containts mostly updates related new gTLDs:
   - Donuts
   - Famous Four Media
   - GMO Registry
+  - KSRegistry (Starting Dot)
   - Minds And Machines
   - Neustar
   - Registry-in-a-Box from NicAT
