@@ -8,7 +8,9 @@ other protocols (Whois,DAS,RRI,RRP) or transports *might* not work in this versi
 
 #### New gTLDS
 = Fix UniRegistry Contacts/Polls issue
-= Added CRR (Charleston Road Regisry) DRD and to NGTLD drd
++ Added CRR (Charleston Road Regisry) DRD and to NGTLD drd
++ Add KSRegistry (NGTLD only)
+= Split MAM to MAM and MAMSRS as the latter are their clients have have dedicated EPP servers
 
 #### ccTLDs
 = Protocol/EPP/Extensions/NO/Domain : bugfix on the deleteDate parameter handling - form Net-DRI-0.96_05.no.1.0.1_1 (Jørgen Thomsen/Trond Haugen)
